SERVER-48952 Improve stacktrace-related log messages