src/mongo/util/stacktrace_somap.cpp
@@ -34,6 +34,7 @@
 
 #include <climits>
 #include <cstdlib>
+#include <fmt/format.h>
 #include <string>
 
 #if defined(__linux__)
@@ -144,49 +145,55 @@ void processLoadSegment(const dl_phdr_info& info, const ElfW(Phdr) & phdr, BSONO
     // Segment includes beginning of file and is large enough to hold the ELF header
     memcpy(&eHeader, (char*)(info.dlpi_addr + phdr.p_vaddr), sizeof(eHeader));
 
-    std::string quotedFileName = "\"" + str::escape(info.dlpi_name) + "\"";
+    const char* filename = info.dlpi_name;
 
-    if (memcmp(&eHeader.e_ident[0], ELFMAG, SELFMAG)) {
+    if (memcmp(&eHeader.e_ident[EI_MAG0], ELFMAG, SELFMAG)) {
         LOGV2_WARNING(23842,
-                      "Bad ELF magic number in image of {quotedFileName}",
-                      "quotedFileName"_attr = quotedFileName);
+                      "Bad ELF magic number",
+                      "filename"_attr = filename,
+                      "magic"_attr = hexdump((const char*)&eHeader.e_ident[EI_MAG0], SELFMAG),
+                      "magicExpected"_attr = hexdump(ELFMAG, SELFMAG));
         return;
     }
 
-    static constexpr int kArchBits = ARCH_BITS;
-    if (eHeader.e_ident[EI_CLASS] != ARCH_ELFCLASS) {
+    if (uint8_t elfClass = eHeader.e_ident[EI_CLASS]; elfClass != ARCH_ELFCLASS) {
+        auto elfClassStr = [](uint8_t c) -> std::string {
+            switch (c) {
+                case ELFCLASS32:
+                    return "ELFCLASS32";
+                case ELFCLASS64:
+                    return "ELFCLASS64";
+            }
+            return format(FMT_STRING("[elfClass unknown: {}]"), c);
+        };
         LOGV2_WARNING(23843,
-                      "Expected elf file class of {quotedFileName} to be "
-                      "{ARCH_ELFCLASS}({kArchBits}-bit), but found {int_eHeader_e_ident_4}",
-                      "quotedFileName"_attr = quotedFileName,
-                      "ARCH_ELFCLASS"_attr = ARCH_ELFCLASS,
-                      "kArchBits"_attr = kArchBits,
-                      "int_eHeader_e_ident_4"_attr = int(eHeader.e_ident[4]));
+                      "Unexpected ELF class (i.e. bit width)",
+                      "filename"_attr = filename,
+                      "elfClass"_attr = elfClassStr(elfClass),
+                      "elfClassExpected"_attr = elfClassStr(ARCH_ELFCLASS));
         return;
     }
 
-    if (eHeader.e_ident[EI_VERSION] != EV_CURRENT) {
+    if (uint32_t elfVersion = eHeader.e_ident[EI_VERSION]; elfVersion != EV_CURRENT) {
         LOGV2_WARNING(23844,
-                      "Wrong ELF version in {quotedFileName}.  Expected {EV_CURRENT} but found "
-                      "{int_eHeader_e_ident_EI_VERSION}",
-                      "quotedFileName"_attr = quotedFileName,
-                      "EV_CURRENT"_attr = EV_CURRENT,
-                      "int_eHeader_e_ident_EI_VERSION"_attr = int(eHeader.e_ident[EI_VERSION]));
+                      "Wrong ELF version",
+                      "filename"_attr = filename,
+                      "elfVersion"_attr = elfVersion,
+                      "elfVersionExpected"_attr = EV_CURRENT);
         return;
     }
 
-    soInfo->append("elfType", eHeader.e_type);
+    uint16_t elfType = eHeader.e_type;
+    soInfo->append("elfType", elfType);
 
-    switch (eHeader.e_type) {
+    switch (elfType) {
         case ET_EXEC:
             break;
         case ET_DYN:
             return;
         default:
-            LOGV2_WARNING(23845,
-                          "Surprised to find {quotedFileName} is ELF file of type {eHeader_e_type}",
-                          "quotedFileName"_attr = quotedFileName,
-                          "eHeader_e_type"_attr = eHeader.e_type);
+            LOGV2_WARNING(
+                23845, "Unexpected ELF type", "filename"_attr = filename, "elfType"_attr = elfType);
             return;
     }
 
