src/mongo/util/stacktrace_test.cpp
@@ -161,8 +161,7 @@ TEST(StackTrace, PosixFormat) {
     stack_trace_test_detail::recurseWithLinkage(param, 3);
 
     if (kSuperVerbose) {
-        LOGV2_OPTIONS(
-            24153, {logv2::LogTruncation::Disabled}, "trace:{{{trace}}}", "trace"_attr = trace);
+        LOGV2_OPTIONS(24153, {logv2::LogTruncation::Disabled}, "Trace", "trace"_attr = trace);
     }
 
     // Expect log to be a "BACKTRACE:" 1-line record, followed by some "Frame:" lines.
@@ -391,13 +390,11 @@ public:
 
     static void handlerPreamble(int sig) {
         LOGV2(23387,
-              "tid:{ostr_stdx_this_thread_get_id}, caught signal {sig}!\n",
-              "ostr_stdx_this_thread_get_id"_attr = ostr(stdx::this_thread::get_id()),
+              "Thread caught signal!",
+              "tid"_attr = ostr(stdx::this_thread::get_id()),
               "sig"_attr = sig);
         char storage;
-        LOGV2(23388,
-              "local var:{reinterpret_cast_uint64_t_storage}",
-              "reinterpret_cast_uint64_t_storage"_attr = reinterpret_cast<uintptr_t>(&storage));
+        LOGV2(23388, "Local var", "var"_attr = integerToHex(reinterpret_cast<uintptr_t>(&storage)));
     }
 
     static void tryHandler(void (*handler)(int, siginfo_t*, void*)) {
@@ -407,13 +404,11 @@ public:
         constexpr unsigned char kSentinel = 0xda;
         std::fill(buf->begin(), buf->end(), kSentinel);
         LOGV2(24157,
-              "sigaltstack buf: [{size}] @{data}",
+              "sigaltstack buf",
               "size"_attr = integerToHex(buf->size()),
               "data"_attr = integerToHex(reinterpret_cast<uintptr_t>(buf->data())));
         stdx::thread thr([&] {
-            LOGV2(23389,
-                  "tid:{ostr_stdx_this_thread_get_id} running\n",
-                  "ostr_stdx_this_thread_get_id"_attr = ostr(stdx::this_thread::get_id()));
+            LOGV2(23389, "Thread running", "tid"_attr = ostr(stdx::this_thread::get_id()));
             {
                 stack_t ss;
                 ss.ss_sp = buf->data();
@@ -447,7 +442,7 @@ public:
         size_t used = std::distance(
             std::find_if(buf->begin(), buf->end(), [](unsigned char x) { return x != kSentinel; }),
             buf->end());
-        LOGV2(23390, "stack used: {used} bytes\n", "used"_attr = used);
+        LOGV2(23390, "Stack used", "bytes"_attr = used);
     }
 };
 
@@ -552,7 +547,7 @@ public:
         printAllThreadStacks(sink);
         if (kSuperVerbose)
             LOGV2_OPTIONS(
-                24156, {logv2::LogTruncation::Disabled}, "{dumped}", "dumped"_attr = dumped);
+                24156, {logv2::LogTruncation::Disabled}, "Dumped", "dumped"_attr = dumped);
 
         reapWorkers();
 
@@ -661,13 +656,12 @@ TEST(StackTrace, BacktraceThroughLibc) {
         capture.notify();
         return static_cast<int>(static_cast<const int*>(a) < static_cast<const int*>(b));
     });
-    LOGV2(23391, "caught [{capture_arrSize}]:", "capture_arrSize"_attr = capture.arrSize);
+    LOGV2(23391, "Captured", "frameCount"_attr = capture.arrSize);
     for (size_t i = 0; i < capture.arrSize; ++i) {
         LOGV2(23392,
-              "  [{i}] {reinterpret_cast_uint64_t_capture_arr_i}",
+              "Frame",
               "i"_attr = i,
-              "reinterpret_cast_uint64_t_capture_arr_i"_attr =
-                  reinterpret_cast<uint64_t>(capture.arr[i]));
+              "frame"_attr = integerToHex(reinterpret_cast<uintptr_t>(capture.arr[i])));
     }
 }
 #endif  // mongo stacktrace backend
